Remove all attempted uses of interleaved markdown (#470)
* Fix links to sections in fraud-tutorial tip

* Remove all attempted uses of interleaved markdown

--- a/fraud-tutorial.mdx
+++ b/fraud-tutorial.mdx
@@ -39,11 +39,11 @@ class User:
 
 <TipInfo>
   Features are the abstract underlying attributes of your data.
-  In the example above `id`, `birthday`, `name`, `email`, `username`, `age`, and `is_adult` are all features.
+  In the example above <code>id</code>, <code>birthday</code>, <code>name</code>, <code>email</code>, <code>username</code>, <code>age</code>, and <code>is_adult</code> are all features.
   Features are grouped together (namespaced) in what are called feature
   classes.
-  For instance, the `User` class is a **feature class** (also sometimes referred to as a **feature set**).
-  Specific instances of a feature class are **feature class instances**.
+  For instance, the <code>User</code> class is a <strong>feature class</strong> (also sometimes referred to as a <strong>feature set</strong>).
+  Specific instances of a feature class are <strong>feature class instances</strong>.
 </TipInfo>
 
 Note, you define your features before defining how they will be computed.
@@ -75,7 +75,7 @@ resolved from the online store.
 
 <TipInfo>
   We'll talk more about deploying code to Chalk later, but, if you'd like to, you're welcome to
-  skip ahead to get a better sense of [deploying code to Chalk] and [running queries].
+  skip ahead to get a better sense of <a href="#deploying">deploying code to Chalk</a> and <a href="#querying">running queries</a>.
 </TipInfo>
 
 This should not be surprising.
