fixing link for stream resolver environment reference

--- a/native-streaming.mdx
+++ b/native-streaming.mdx
@@ -398,7 +398,7 @@ users_streaming_resolver = make_stream_resolver(
 
 ## Environment-specific Stream Resolvers
 
-A stream resolver can be restricted to a specific environment through the [`environment`](api-docs#make_stream_resolver.environment) parameter of `make_stream_resolver`:
+A stream resolver can be restricted to a specific environment through the [`environment`](/api-docs#make_stream_resolver.environment) parameter of `make_stream_resolver`:
 
 ```python
 
