published: true, for local viewing

--- a/chalksql/sql-as-input.mdx
+++ b/chalksql/sql-as-input.mdx
@@ -2,7 +2,7 @@
 title: SQL as Input
 metaTitle: Using Chalk SQL as a Query Input
 metaDescription: 'In a bulk query (online or offline), you can use Chalk SQL to compute the input values dynamically.'
-published: false
+published: true
 ---
 
 
