--- a/chalksql/what-is-chalk-sql.mdx
+++ b/chalksql/what-is-chalk-sql.mdx
@@ -2,7 +2,7 @@
 title: Chalk SQL
 metaTitle: What is Chalk SQL?
 metaDescription: 'Chalk SQL is a powerful, familiar, and expressive language to make federated queries against all things Chalk.'
-published: false
+published: true
 ---
 
 Chalk SQL is dialect of SQL developed within Chalk built to create **federated queries** across a
