--- a/chalksql/sql-as-input.mdx
+++ b/chalksql/sql-as-input.mdx
@@ -136,7 +136,7 @@ client.offline_query(
 )
 ```
 
-# Setting a query time](/docs/time#query-time)
+# Setting a query time
 
 Normally, online and offline queries let you specify a [query time](/docs/time#query-time)
 by passing an `input_times` or `now` argument.
