fix: typo + version clairifcation

--- a/tracing.mdx
+++ b/tracing.mdx
@@ -21,14 +21,14 @@ you can either add a flag at query time or set environment variables for environ
 
 ### Requirements
 
-To use tracing features, please ensure that you add the following Python depdency
+To use tracing features, please ensure that you add the following Python dependency
 - `chalkpy[tracing]`
 
 This links required peer dependencies for OpenTelemetry tracing:
 - `opentelemetry-api`
 - `opentelemetry-sdk`
 
-Please note that tracing is not fully supported in the python client until version `2.95.9`
+Please note that tracing is not fully supported in the python client until version `chalkpy>=2.95.9`
 
 ### Query-time traces
 
