--- a/chalksql/sql-as-input.mdx
+++ b/chalksql/sql-as-input.mdx
@@ -7,7 +7,7 @@ published: true
 
 
 If you need to compute the inputs to a query dynamically, you can use ChalkSQL to do so in a single query.
-This can help you improve performance and reduce costs by avoiding extra round trips across the network.
+This can improve performance and reduce cost by avoiding extra round trips across the network.
 
 - This feature works in:
     - [`ChalkGRPCClient.online_query_bulk()`](/api-docs#ChalkGRPCClient.online_query_bulk)
