--- a/chalksql/sql-as-input.mdx
+++ b/chalksql/sql-as-input.mdx
@@ -6,7 +6,7 @@ published: true
 ---
 
 
-If you need to compute the inputs to a query dynamically, you can use ChalkSQL to do so in a single query.
+If you need to compute the inputs to a query dynamically, you can use ChalkSQL.
 This can improve performance and reduce cost by avoiding extra round trips across the network.
 
 - This feature works in:
