--- a/chalksql/sql-as-input.mdx
+++ b/chalksql/sql-as-input.mdx
@@ -79,7 +79,7 @@ grpc_client.online_query_bulk(
 )
 ```
 
-This returns the same result that the original query with hardcoded inputs did.
+This returns the same result as the original query with hardcoded inputs.
 But now we can replace the SQL with something more dynamic, such as a data source.
 
 For example, to get the IDs of all users whose last name starts with "S":
