--- a/chalksql/sql-as-input.mdx
+++ b/chalksql/sql-as-input.mdx
@@ -115,7 +115,7 @@ grpc_client.online_query_bulk(
 
 ## In offline queries
 
-This is the same as the previous example: the only difference is you use `ChalkClient.offline_query` instead of `ChalkGRPCClient.online_query_bulk`.
+This is the same as the previous example: the only difference is that it uses `ChalkClient.offline_query` instead of `ChalkGRPCClient.online_query_bulk`.
 ```py
 client = ChalkClient(...)
 
