fix bigquery.datasets.get explanation

--- a/bigquery.mdx
+++ b/bigquery.mdx
@@ -35,7 +35,7 @@ of the data source.
 - `bigquery.tables.updateData` on the target dataset
 - `bigquery.jobs.create` on the target project
 - `bigquery.jobs.get` on the target project
-- `bigquery.datasets.get` on all referenced projects in Chalk SQL
+- `bigquery.datasets.get` on all projects, for Chalk SQL compatibility
 
 
 Using BigQuery's predefined IAM roles, you can get these permissions by ensuring that the service account has the following:
