--- a/client-java.mdx
+++ b/client-java.mdx
@@ -79,5 +79,5 @@ public class Main {
 ## Next Steps
 
 - [Query Basics](/docs/query-basics) - Learn how to query features
-- [Authentication](/docs/auth) - Set up authentication for your client
+- [Authentication](/docs/online-authentication) - Set up authentication for your client
 - [Online Query API](/docs/query-online) - Explore the online query API
