--- a/client-go.mdx
+++ b/client-go.mdx
@@ -71,5 +71,5 @@ func main() {
 ## Next Steps
 
 - [Query Basics](/docs/query-basics) - Learn how to query features
-- [Authentication](/docs/auth) - Set up authentication for your client
+- [Authentication](/docs/online-authentication) - Set up authentication for your client
 - [Online Query API](/docs/query-online) - Explore the online query API
