--- a/client-python.mdx
+++ b/client-python.mdx
@@ -54,6 +54,6 @@ print(result)
 ## Next Steps
 
 - [Query Basics](/docs/query-basics) - Learn how to query features
-- [Authentication](/docs/auth) - Set up authentication for your client
+- [Authentication](/docs/online-authentication) - Set up authentication for your client
 - [Online Query API](/docs/query-online) - Explore the online query API
 - [Python SDK Reference](/api-docs) - Full API documentation
