--- a/client-ruby.mdx
+++ b/client-ruby.mdx
@@ -66,5 +66,5 @@ puts result
 ## Next Steps
 
 - [Query Basics](/docs/query-basics) - Learn how to query features
-- [Authentication](/docs/auth) - Set up authentication for your client
+- [Authentication](/docs/online-authentication) - Set up authentication for your client
 - [Online Query API](/docs/query-online) - Explore the online query API
