--- a/client-typescript.mdx
+++ b/client-typescript.mdx
@@ -61,5 +61,5 @@ console.log(result);
 ## Next Steps
 
 - [Query Basics](/docs/query-basics) - Learn how to query features
-- [Authentication](/docs/auth) - Set up authentication for your client
+- [Authentication](/docs/online-authentication) - Set up authentication for your client
 - [Online Query API](/docs/query-online) - Explore the online query API
