--- a/benchmark.mdx
+++ b/benchmark.mdx
@@ -7,7 +7,7 @@ comingSoon: true
 
 ---
 
-After setting up your features, resolvers, etc., you'll want to see if your queries meet your speed requirements! We have a tool in alpha to make this process easier. To explore the most up-to-date options available, run `chalk benchmark --help` in the terminal using the .
+After setting up your features, resolvers, etc., you'll want to see if your queries meet your speed requirements! We have a tool in alpha to make this process easier. To explore the most up-to-date options available, run `chalk benchmark --help` in the terminal using the CLI tool.
 
 ---
 
