--- a/tasks.mdx
+++ b/tasks.mdx
@@ -171,7 +171,7 @@ Execute the same script multiple times with different parameters using a JSONL f
 
 Each line is a JSON object with `kwargs` (and optionally `args`):
 
-```jsonl
+```json
 {"kwargs": {"learning_rate": "0.001", "batch_size": "32", "epochs": "10"}}
 {"kwargs": {"learning_rate": "0.005", "batch_size": "64", "epochs": "10"}}
 {"kwargs": {"learning_rate": "0.01", "batch_size": "128", "epochs": "5"}}
