--- a/client-java.mdx
+++ b/client-java.mdx
@@ -25,7 +25,7 @@ Add the Chalk Java client to your project using Maven or Gradle:
 
 ### Gradle
 
-```gradle
+```groovy
 dependencies {
     implementation 'ai.chalk:chalk-java:latest'
 }
