llm published flag

--- a/athena.mdx
+++ b/athena.mdx
@@ -2,6 +2,7 @@
 title: AWS Athena
 description: Integrate with Athena
 published: true
+llms: hidden
 ---
 
 import { AddAthenaIntegration } from '@/components/shared/athena';
