--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -2,6 +2,7 @@
 title: AWS Cloud Deployment IAM Requirements
 description: Deploying Chalk to your AWS account.
 published: true
+llms: hidden
 ---
 
 import { ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
