--- a/background-persistence-installation.mdx
+++ b/background-persistence-installation.mdx
@@ -2,6 +2,7 @@
 title: Chalk Dataplane Installation (Background Persistence)
 description: Background Persistence Installation Via the UI
 published: true
+llms: hidden
 ---
 
 import {
