--- a/branches.mdx
+++ b/branches.mdx
@@ -4,6 +4,7 @@ metaTitle: Working with Branches
 metaDescription: Branch deployments allow users to iterate on feature pipelines in separate deployments mirroring production.
 description: Make rapid changes and explore features with branches.
 published: true
+llms: short
 ---
 
 ---
