--- a/configuration.mdx
+++ b/configuration.mdx
@@ -2,6 +2,7 @@
 title: File Structure
 description: Configure your Chalk project and organize your features and resolvers.
 published: true
+llms: short
 ---
 
 import {
