--- a/databricks.mdx
+++ b/databricks.mdx
@@ -2,6 +2,7 @@
 title: Databricks
 description: Integrate with Databricks.
 published: true
+llms: hidden
 ---
 
 import { getEnvironmentVariableText, getNamedIntegrationText } from "@/components/NamedIntegration";
