--- a/databricks_offline_store.mdx
+++ b/databricks_offline_store.mdx
@@ -2,6 +2,7 @@
 title: Databricks Offline Store Setup
 description: Using Databricks as your offline store.
 published: true
+llms: hidden
 ---
 
 ## Databricks Workspace Prerequisites
