--- a/dynamodb.mdx
+++ b/dynamodb.mdx
@@ -2,6 +2,7 @@
 title: DynamoDB
 description: Integrate with DynamoDB.
 published: true
+llms: hidden
 ---
 
 Chalk supports [DynamoDB](https://aws.amazon.com/dynamodb/) as a natively accelerated [SQL source](/docs/sql). After connecting your AWS
