--- a/expression.mdx
+++ b/expression.mdx
@@ -2,6 +2,7 @@
 title: Expressions
 description: Using Chalk expressions to define features
 published: true
+llms: short
 ---
 
 import {TipBad, TipGood, TipBadText, TipGoodText} from '@/components/Tip'
