--- a/faq.mdx
+++ b/faq.mdx
@@ -4,6 +4,7 @@ metaTitle: FAQs
 metaDescription: A collection of questions frequently asked by customers.
 description: A collection of questions frequently asked by customers
 published: true
+llms: short
 ---
 
 import {RBACDiagram} from '@/components/ArchitectureDiagram'
