--- a/gcp-cloud-deployment.mdx
+++ b/gcp-cloud-deployment.mdx
@@ -2,6 +2,7 @@
 title: GCP Cloud Deployment
 description: How to deploy Chalk to GCP.
 published: true
+llms: hidden
 ---
 
 import { ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
