--- a/has-one.mdx
+++ b/has-one.mdx
@@ -2,6 +2,7 @@
 title: Has One
 description: Define one-to-one relationships between feature classes.
 published: true
+llms: short
 ---
 
 import { PyDiffEditor } from '@/components/Editor'
