--- a/iceberg-deployment.mdx
+++ b/iceberg-deployment.mdx
@@ -1,7 +1,8 @@
 ---
 title: Iceberg Setup Requirements
 description: Setting up Iceberg as your offline store.
-published: true 
+published: true
+llms: hidden
 ---
 
 Chalk's feature platform enables
