--- a/incidentio.mdx
+++ b/incidentio.mdx
@@ -2,6 +2,7 @@
 title: incident.io
 description: Integrate Chalk alerts with your incident.io alert routes
 published: true
+llms: hidden
 ---
 
 ---
