--- a/kube-resources-drilldown.mdx
+++ b/kube-resources-drilldown.mdx
@@ -2,6 +2,7 @@
 title: Kubernetes Resources Overview
 description: A description of each kind of Kubernetes resource used by Chalk
 published: true
+llms: hidden
 ---
 
 import { ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
