--- a/okta-scim.mdx
+++ b/okta-scim.mdx
@@ -2,6 +2,7 @@
 title: Okta SCIM
 description: Setting up Okta to automatically provision and deprovision Chalk users.
 published: true
+llms: hidden
 ---
 
 Chalk implements SCIM in order to allow external
