--- a/postgresql.mdx
+++ b/postgresql.mdx
@@ -2,6 +2,7 @@
 title: PostgreSQL
 description: Integrate with SQL data sources.
 published: true
+llms: hidden
 ---
 
 import { AddPostgresIntegration } from '@/components/shared/postgres'
