--- a/python-resolvers.mdx
+++ b/python-resolvers.mdx
@@ -2,6 +2,7 @@
 title: Python Resolvers
 description: Specify dependencies and results of feature resolvers.
 published: true
+llms: short
 ---
 
 import { TipBad, TipGood } from '@/components/Tip'
