--- a/query-online.mdx
+++ b/query-online.mdx
@@ -2,6 +2,7 @@
 title: Online Queries
 description: Fetch feature values via online queries
 published: true
+llms: short
 ---
 
 import { TipInfo } from '@/components/Tip'
