--- a/resolver-overview.mdx
+++ b/resolver-overview.mdx
@@ -5,6 +5,7 @@ metaTitle: Resolvers - Create resolvers to compute feature values.
 metaDescription: Resolvers define how your feature values are computed. Resolvers can be written in Python or SQL.
 description: Create resolvers to compute feature values.
 published: true
+llms: short
 ---
 
 import { TipInfo } from '@/components/Tip'
