--- a/resource-configuration.mdx
+++ b/resource-configuration.mdx
@@ -2,6 +2,7 @@
 title: Resource Configuration
 description: Configure your Chalk Kubernetes cluster
 published: true
+llms: hidden
 ---
 
 ## Overview
