--- a/security.mdx
+++ b/security.mdx
@@ -4,6 +4,7 @@ metaTitle: Security Overview and Privacy Protection
 metaDescription: At Chalk, protecting customer data is core to our mission. We integrate security best practices into every aspect of our operations and product development.
 description: How Chalk protects your data.
 published: true
+llms: hidden
 ---
 
 import { ServiceDiagramSwitcher, NetworkArchitectureDiagram } from "@/components/ArchitectureDiagram"
