--- a/setup-guide.mdx
+++ b/setup-guide.mdx
@@ -4,6 +4,7 @@ metaTitle: Chalk Setup Guide
 metaDescription: A step-by-step guide for customizing your Chalk solution to help you achieve all of your data goals.
 description: Customizing your Chalk solution.
 published: true
+llms: short
 ---
 
 ---
