--- a/slack.mdx
+++ b/slack.mdx
@@ -2,6 +2,7 @@
 title: Slack
 description: Integrate Chalk alerts with Slack.
 published: true
+llms: hidden
 ---
 
 Chalk supports integration with [Slack](https://slack.com) for alerting.
