--- a/snowflake-gcp-deployment.mdx
+++ b/snowflake-gcp-deployment.mdx
@@ -2,6 +2,7 @@
 title: Snowflake Setup Requirements (GCP)
 description: Setting up Snowflake as your offline store with Google Cloud Storage.
 published: true
+llms: hidden
 ---
 
 To use Snowflake as your offline store, we require
