--- a/snowflake.mdx
+++ b/snowflake.mdx
@@ -2,6 +2,7 @@
 title: Snowflake
 description: Integrate with Snowflake.
 published: true
+llms: hidden
 ---
 
 import { getEnvironmentVariableText, getNamedIntegrationText } from "@/components/NamedIntegration";
