--- a/spanner.mdx
+++ b/spanner.mdx
@@ -2,6 +2,7 @@
 title: Spanner
 description: Integrate with Spanner.
 published: true
+llms: hidden
 ---
 
 import { AddSpannerIntegration } from '@/components/shared/spanner';
