--- a/static-ips.mdx
+++ b/static-ips.mdx
@@ -4,6 +4,7 @@ metaTitle: Chalk Static IP Addresses
 metaDescription: IP addresses and CIDR blocks for Chalk infrastructure that should be whitelisted in firewalls and security tools.
 description: IP addresses for firewall and security configuration.
 published: true
+llms: hidden
 ---
 
 ## Overview
