--- a/storage.mdx
+++ b/storage.mdx
@@ -4,6 +4,7 @@ metaTitle: Online and Offline Storage in the Chalk platform
 metaDescription: Chalk's architecture enables teams to run a high-performance feature store entirely in their own VPC—without sacrificing latency, security, or observability.
 description: How it all fits together.
 published: true
+llms: hidden
 ---
 
 Chalk offers
