--- a/temporal-consistency.mdx
+++ b/temporal-consistency.mdx
@@ -2,6 +2,7 @@
 title: Temporal Consistency
 description: Point-in-time queries for training data sets.
 published: true
+llms: short
 ---
 
 import { BackfillExample, TemporalCorrectnessBusiness } from '@/components/home/TemporalCorrectness'
