--- a/time.mdx
+++ b/time.mdx
@@ -3,6 +3,7 @@ title: Time Overview
 shortTitle: Overview
 description: Manage feature timestamps and point-in-time query timestamps.
 published: true
+llms: short
 ---
 
 import { TipInfo } from '@/components/Tip'
