--- a/vector-db.mdx
+++ b/vector-db.mdx
@@ -2,6 +2,7 @@
 title: Vector Databases
 description: Configure and use vector databases for efficient nearest neighbor search
 published: true
+llms: hidden
 ---
 
 Vector databases enable efficient storage and retrieval of high-dimensional vectors for nearest neighbor search operations. Chalk integrates with vector databases to provide scalable vector search capabilities for your feature pipelines.
