--- a/webhooks.mdx
+++ b/webhooks.mdx
@@ -2,6 +2,7 @@
 title: Webhooks
 description: Integrate Chalk alerts with Webhooks.
 published: true
+llms: hidden
 ---
 
 Chalk can send push notifications to configured external endpoints through webhooks.
