--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -5,6 +5,7 @@ metaDescription: 'Chalk is the data platform for inference that enables innovati
 titleHidden: true
 hideToc: true
 published: true
+llms: short
 ---
 
 import { DocsHero } from '@/components/home/DocsHero'
