--- a/features.mdx
+++ b/features.mdx
@@ -5,6 +5,7 @@ metaTitle: Features - Define features for training and inference.
 metaDescription: Features are properties of your data you want to train your model on. With Chalk, you can define your features in Python.
 description: Define features for training and inference.
 published: true
+llms: short
 ---
 
 import { PyDiffEditor } from '@/components/Editor'
