--- a/has-many.mdx
+++ b/has-many.mdx
@@ -2,6 +2,7 @@
 title: Has Many
 description: Define one-to-many and many-to-many relationships between feature classes.
 published: true
+llms: short
 ---
 
 import { PyDiffEditor } from '@/components/Editor'
