--- a/lifecycle.mdx
+++ b/lifecycle.mdx
@@ -4,6 +4,7 @@ metaTitle: Feature Development Lifecycle
 metaDescription: Chalk is the fastest way to deploy new feature pipelines to production.
 description: Developing, testing, deploying, and backfilling a new feature
 published: true
+llms: short
 ---
 
 import { highlightedCode as integrationTest } from '@/samples/features/integration_test.py?highlight=py'
