--- a/mssql.mdx
+++ b/mssql.mdx
@@ -2,6 +2,7 @@
 title: Microsoft SQL Server
 description: Integrate with Microsoft SQL Server data sources.
 published: true
+llms: hidden
 ---
 
 import { AddMSSQLIntegration } from '@/components/shared/mssql'
