--- a/mysql.mdx
+++ b/mysql.mdx
@@ -2,6 +2,7 @@
 title: MySQL
 description: Integrate with MySQL data sources.
 published: true
+llms: hidden
 ---
 
 import { AddMySQLIntegration } from '@/components/shared/mysql'
