--- a/okta-saml.mdx
+++ b/okta-saml.mdx
@@ -2,6 +2,7 @@
 title: Okta SAML SSO
 description: Setting up Okta to work with Chalk
 published: true
+llms: hidden
 ---
 
 Chalk is capable of using standard SSO providers like Google and GitHub for SSO authentication.
