--- a/query-basics.mdx
+++ b/query-basics.mdx
@@ -2,6 +2,7 @@
 title: Chalk Clients
 description: Fetch feature values via online query.
 published: true
+llms: short
 ---
 
 import {ClientLibraries} from "@/components/HighlightsGrid";
