--- a/query-overview.mdx
+++ b/query-overview.mdx
@@ -5,6 +5,7 @@ metaTitle: Queries - Fetch feature values via queries.
 metaDescription: Chalk computes features through online queries, which return real-time data as fast as possible, and offline queries, which are best for batch processing large amounts of data.
 description: Fetch feature values via queries.
 published: true
+llms: short
 ---
 
 ---
