--- a/redshift.mdx
+++ b/redshift.mdx
@@ -2,6 +2,7 @@
 title: Redshift
 description: Integrate with SQL data sources.
 published: true
+llms: hidden
 ---
 
 import { getEnvironmentVariableText, getNamedIntegrationText } from "@/components/NamedIntegration";
