--- a/snowflake-deployment.mdx
+++ b/snowflake-deployment.mdx
@@ -2,6 +2,7 @@
 title: Snowflake Setup Requirements
 description: Setting up Snowflake as your offline store.
 published: true
+llms: hidden
 ---
 
 import { ServiceDiagramSwitcher } from '@/components/ArchitectureDiagram'
