--- a/model-tutorial.mdx
+++ b/model-tutorial.mdx
@@ -23,7 +23,7 @@ First, define feature classes that represent the entities in your domain. Featur
 # src/features.py
 from datetime import datetime
 from chalk import windowed, Windowed
-from chalk.features import features, Primary, DataFrame, FeatureTime, _
+from chalk.features import features, Primary, DataFrame, _
 import chalk.functions as F
 
 @features
